@@ -33,6 +33,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #4338: Fix distutils upload command.
+
 - Issue #4354: Fix distutils register command.
 
 - Issue #4116: Resolve member name conflict in ScrolledCanvas.__init__.
